--- a/CSS/index.css
+++ b/CSS/index.css
@@ -77,9 +77,9 @@ p{
     text-align:center;
 }
 .box:hover{
-    border : 3rem rgba(128,128,128,0) solid;
     border-radius: 2rem;
-    transition: all 1s ease-in ;
+    transform:scale(1.1);
+    transition: all .5s ease-in ;
 } 
 #box1:hover:after{
     transition-property: all;
